--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-flight-booking></app-flight-booking>
-<app-hotel-booking></app-hotel-booking>
-<router-outlet></router-outlet>
+<app-header></app-header>
+  <router-outlet></router-outlet>
 <app-footer></app-footer>
