fixing font-style

--- a/src/app/authentication/components/register/register.component.html
+++ b/src/app/authentication/components/register/register.component.html
@@ -33,7 +33,7 @@
           <button type="submit" [disabled]="registerForm.invalid" class="w-full rounded-md bg-indigo-500 px-3 py-4 text-white">Register</button>
         </div>
         <p class="text-center text-sm text-gray-500">Have account?
-          <a routerLink="/auth/login" class="text-semibold text-indigo-700">Login</a>
+          <a routerLink="/auth/login" class="font-semibold text-indigo-700">Login</a>
         </p>
       </form>
     </div>
