--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -154,7 +154,7 @@
                   <p class="md:text-xl text-gray-800 text-base leading-4 ml-2">Jane Doe</p>
                 </div>
                 <ul class="flex">
-                  <li class="cursor-pointer text-white pt-5 pb-3">
+                  <!--<li class="cursor-pointer text-white pt-5 pb-3">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="24" height="24" viewBox="0 0 24 24" stroke-width="1" stroke="#718096" fill="none" stroke-linecap="round" stroke-linejoin="round">
                       <path stroke="none" d="M0 0h24v24H0z"></path>
                       <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10"></path>
@@ -167,8 +167,8 @@
                       <path d="M10 5a2 2 0 0 1 4 0a7 7 0 0 1 4 6v3a4 4 0 0 0 2 3h-16a4 4 0 0 0 2 -3v-3a7 7 0 0 1 4 -6"></path>
                       <path d="M9 17v1a3 3 0 0 0 6 0v-1"></path>
                     </svg>
-                  </li>
-                  <li class="w-full flex justify-center py-12" id="button">
+                  </li>-->
+                  <li class="w-full flex justify-center h-8" id="button">
                     <button class="focus:outline-none mx-auto transition duration-150 ease-in-out hover:bg-indigo-600 bg-indigo-700 rounded text-white px-4 sm:px-8 py-2 text-xs sm:text-sm" (click)="openModal()">Open Modal</button>
                   </li>
                 </ul>
@@ -198,7 +198,7 @@
           </div>
           <div class="w-1/2 hidden lg:flex">
             <div class="w-full flex items-center pl-8 justify-end">
-              <div class="h-full w-20 flex items-center justify-center border-r border-l">
+              <div class="h-full w-20 flex items-center justify-center border-r border-l mr-4">
                 <div class="relative cursor-pointer text-gray-600">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bell" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z"></path>
@@ -208,13 +208,13 @@
                   <div class="w-2 h-2 rounded-full bg-red-400 border border-white absolute inset-0 mt-1 mr-1 m-auto"></div>
                 </div>
               </div>
-              <div class="h-full w-20 flex items-center justify-center border-r mr-4 cursor-pointer text-gray-600">
+              <!--<div class="h-full w-20 flex items-center justify-center border-r mr-4 cursor-pointer text-gray-600">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" />
                   <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
                   <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
                 </svg>
-              </div>
+              </div>-->
               <div class="flex items-center relative cursor-pointer" (click)="isList === 1 ? (isList = 0) : (isList = 1)">
                 <div class="rounded-full">
                   <ul class="p-2 w-full border-r bg-white absolute rounded left-0 shadow mt-12 sm:mt-16" *ngIf="isList">
@@ -254,7 +254,7 @@
                     <div class="w-2 h-2 rounded-full bg-green-400 border border-white absolute inset-0 mb-0 mr-0 m-auto"></div>
                   </div>
                 </div>
-                <p class="text-gray-800 text-sm mx-3">Jane Doe</p>
+                <p class="text-gray-800 text-sm mx-3">Jane</p>
                 <div class="cursor-pointer text-gray-600">
                   <svg aria-haspopup="true" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" />
@@ -277,11 +277,9 @@
         </li>
       </nav>
       <!-- Navigation ends -->
-      <!-- Remove class [ h-64 ] when adding a card block -->
-      <div class="container mx-auto h-64 py-10 md:w-4/5 w-11/12 px-6">
-        <!-- Remove class [ border-dashed border-2 border-gray-300 ] to remove dotted border -->
+      <div class="container mx-auto h-full py-3 md:w-full w-full">
         <div class="w-full h-full rounded">
-          <!-- Place your content here -->
+          <!-- Content here -->
           <router-outlet></router-outlet>
         </div>
       </div>
