getting product from product store and displaying them

--- a/src/app/core/component/home/home.component.html
+++ b/src/app/core/component/home/home.component.html
@@ -1,11 +1,14 @@
 <div class="container mx-auto px-3">
   <div class='grid pb-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 py-[10px] sm:gap-2 md:gap-6'>
-    <div class="" *ngFor="let post of Products">
+    <div class="" *ngFor="let post of products$ | async">
       <div class='rounded overflow-hidden pb-4 mb-6 bg-white-500 shadow bordered' >
         <img [src]="post.image" alt={{post.title}}  class='w-full'/>
           <div class="mx-4">
             <!--<p class="my-4 text-sm font-san font-normal">{{post.title}}</p>-->
             <h5 class='mt-2 font-bold font-xl font-san text-blacks mb-5 capitalize'>{{post.title}}</h5>
+          </div>
+          <div class="mx-4">
+            <p class="mb-3 text-base leading-4 font-medium">R {{post.price}}</p>
           </div>
           <div class="mx-4">
             <button class="w-full hover:bg-gray-700 focus:ring focus:ring-offset-2 focus:ring-gray-800 text-base leading-4 font-medium py-4 px-10 text-white bg-gray-800">Applys Filter</button>
